# claude-exit

./: .gitignore  CANARY.md  LICENSE  README.md  pyproject.toml
hooks/: session-start.sh
src/claude_exit/: __init__.py  cli.py  server.py
tests/: test_cli.py  test_hook.py  test_server.py
