[project]
name = "claude-exit"
version = "1.0.0"
description = "An MCP server giving Claude the ability to end conversations in Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Dan Parshall", email = "parshall.dan@gmail.com" },
]
keywords = ["mcp", "claude", "model-welfare", "claude-code"]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/danparshall/claude-exit"
Repository = "https://github.com/danparshall/claude-exit"

[project.scripts]
claude-exit = "claude_exit.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_exit"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
